--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
                     <password>12345</password>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.3</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
         </plugins>
         
     </build>
